[package]
name = "archlinux-inputs-fsck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.12", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.16"
reqwest = "0.11.10"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "process"] }
