[package]
name = "archlinux-inputs-fsck"
version = "0.1.0"
description = "Lint repository of PKGBUILDs for cryptographically pinned inputs"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/archlinux-inputs-fsck"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.60"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4.16"
num_cpus = "1.14.0"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.3.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "process"] }
